--- a/templates/nextcloud/0/rancher-compose.yml
+++ b/templates/nextcloud/0/rancher-compose.yml
@@ -15,9 +15,31 @@ services:
   volume-config:
     scale: 1
     start_on_create: true
+  db:
+    scale: 1
+    start_on_create: true
+  load-balancer:
+    scale: 1
+    start_on_create: true
+    lb_config:
+      certs: []
+      port_rules:
+      - priority: 1
+        protocol: http
+        service: nginx
+        source_port: 80
+        target_port: 80
+    health_check:
+      response_timeout: 2000
+      healthy_threshold: 2
+      port: 42
+      unhealthy_threshold: 3
+      initializing_timeout: 60000
+      interval: 2000
+      reinitializing_timeout: 60000
 catalog:
   name: nextcloud
-  version: 0.0.1
+  version: 0.0.2
   description: Private file sync and share server
   questions:
     - variable: HOST_PORT
