--- a/templates/nextcloud/0/docker-compose.yml
+++ b/templates/nextcloud/0/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     image: mariadb
     environment:
       MYSQL_DATABASE: nextcloud
-      MYSQL_PASSWORD: ${DB_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: asdf
+      MYSQL_ROOT_PASSWORD: asdf
       MYSQL_USER: nextcloud
     volumes:
-    - ${DATA_PATH}/db:/var/lib/mysql
+    - /mnt/gvol0/iouhawef/db:/var/lib/mysql
     command:
     - --transaction-isolation=READ-COMMITTED
     - --binlog-format=ROW
@@ -18,7 +18,7 @@ services:
     tty: true
     environment:
       MYSQL_DATABASE: nextcloud
-      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: asdf
       MYSQL_HOSTNAME: db
       MYSQL_USER: nextcloud
     volumes_from:
@@ -54,7 +54,7 @@ services:
     image: busybox
     stdin_open: true
     volumes:
-    - ${DATA_PATH}/data:/var/www/html/data
+    - /mnt/gvol0/iouhawef/data:/var/www/html/data
     tty: true
     command:
     - /bin/true
@@ -65,7 +65,7 @@ services:
     image: busybox
     stdin_open: true
     volumes:
-    - ${DATA_PATH}/config:/var/www/html/config
+    - /mnt/gvol0/iouhawef/config:/var/www/html/config
     tty: true
     command:
     - /bin/true
@@ -75,7 +75,7 @@ services:
   load-balancer:
     image: rancher/lb-service-haproxy:v0.9.11
     ports:
-    - ${HOST_PORT}:${HOST_PORT}/tcp
+    - 800:800/tcp
     labels:
       io.rancher.container.agent.role: environmentAdmin,agent
       io.rancher.container.agent_service.drain_provider: 'true'
